@@ -13,6 +13,8 @@ firefox-3.0 (3.0~b2~rc1+nobinonly-0ubuntu1) UNRELEASED; urgency=low
   * new upstream snapshot (3.0b2 RC1) from tag FIREFOX_3_0b2_RC1
   * Update Standards-Version to 3.7.3
     - update debian/control
+  * Drop -1.9 suffix of expected xulrunner-1.9 pkg-config files
+    - update debian/patches/nspr_flags_by_pkg_config_hack.patch
 
  -- Fabien Tassin <fta@sofaraway.org>  Wed, 12 Dec 2007 00:17:35 +0100
 
